tests/ui/mismatched_types/array-repeat-unit-struct.stderr
error[E0308]: mismatched types
  --> $DIR/issue-27008.rs:4:17
   |
LL |     let b = [0; S];
   |                 ^ expected `usize`, found `S`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
